Add example of fuzzy search usage in Elastic module