@@ -13,7 +13,8 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.logging.Logger;
+
 import org.elasticsearch.action.DocWriteResponse.Result;
 import org.elasticsearch.action.index.IndexResponse;
 import org.elasticsearch.action.search.SearchResponse;
@@ -32,6 +33,8 @@ import org.junit.Test;
  * This test requires Elasticsearch instance running with cluster name `elasticsearch`
  */
 public class ElasticSearchManualIT {
+
+    private static final Logger log = Logger.getLogger(ElasticSearchManualIT.class.getName());
 
     private static List<Person> listOfPersons = new ArrayList<>() {{
         add(new Person(8, "John Woodcraft", new Date()));
@@ -89,11 +92,26 @@ public class ElasticSearchManualIT {
         checkSearchResponse(response, 2);
     }
 
-    private void checkSearchResponse(SearchResponse searchResponse, int expectedSize) {
+    /**
+     * Trying to search with error in searched name
+     */
+    @Test
+    public void fuzzySearch() {
+        SearchResponse response = client
+                .prepareSearch()
+                .setQuery(QueryBuilders.fuzzyQuery("fullName", "Sevenson"))
+                .get();
+
+        var result = checkSearchResponse(response, 1);
+        log.info("Found next persons: " + result);
+    }
+
+    private List<Person> checkSearchResponse(SearchResponse searchResponse, int expectedSize) {
         SearchHit[] searchHits = searchResponse.getHits().getHits();
         List<Person> result = Arrays.stream(searchHits)
             .map(hit -> JSON.parseObject(hit.getSourceAsString(), Person.class))
-            .collect(Collectors.toList());
+            .toList();
         assertThat("Wrong result items count", result.size(), is(expectedSize));
+        return result;
     }
 }
